ver 0.20.3 (not yet released)
* protocol
  - "playlistadd" creates new playlist if it does not exist, as documented
* use shortcuts such as "dsd64" in log messages

ver 0.20.2 (2017/01/15)
* input
  - alsa: fix crash bug
  - alsa: fix buffer overruns
* decoder
  - flac: add options "probesize" and "analyzeduration"
* resampler
  - libsamplerate: reset state after seeking
* output
  - fix static noise after changing to a different audio format
  - alsa: fix the DSD_U32 sample rate
  - alsa: fix the DSD_U32 byte order
  - alsa: support DSD_U16
  - recorder: fix error "Failed to create : No such file or directory"
* playlist
  - cue: fix skipping songs

ver 0.20.1 (2017/01/09)
* input
  - curl: fix crash bug
  - curl: fix freeze bug
* decoder
  - wavpack: fix crash bug
* storage
  - curl: new storage plugin for WebDAV (work in progress)
* mixer
  - alsa: normalize displayed volume according to human perception
* fix crash with volume_normalization enabled

ver 0.20 (2017/01/04)
* protocol
  - "commands" returns playlist commands only if playlist_directory configured
  - "search"/"find" have a "window" parameter
  - report song duration with milliseconds precision
  - "sticker find" can match sticker values
  - drop the "file:///" prefix for absolute file paths
  - add range parameter to command "plchanges" and "plchangesposid"
  - send verbose error message to client
* input
  - curl: fix memory leak
* tags
  - ape, ogg: drop support for non-standard tag "album artist"
    affected filetypes: vorbis, flac, opus & all files with ape2 tags
    (most importantly some mp3s)
  - id3: remove the "id3v1_encoding" setting; by definition, all ID3v1 tags
    are ISO-Latin-1
  - ape: support APE replay gain on remote files
  - read ID3 tags from NFS/SMB
* decoder
  - improved error logging
  - report I/O errors to clients
  - ffmpeg: support ReplayGain and MixRamp
  - ffmpeg: support stream tags
  - gme: add option "accuracy"
  - gme: provide the TRACK tag